# hash_bench

./: Cargo.toml
benches/: hash_bench.rs
